--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,87 +1,55 @@
-name: 📊 Generate GitHub Metrics
-
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
+name: Metrics
 on:
-  schedule:
-    - cron: "0 3 * * *"  # chaque jour à 3h du matin (UTC)
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-
+  push: {branches: ["master", "main"]}
 jobs:
-  build:
+  github-metrics:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Generate GitHub Metrics
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: github-metrics.svg
 
-          # Options pour les plugins
+          # Options
+          user: AxenoDev
           template: classic
-
-          # Affiche la timeline de contribution journalière
-          activity: true
-
-          # Affiche les langues principales utilisées dans les repos
-          languages: true
-
-          # Affiche les réalisations GitHub (badges)
-          achievements: true
-
-          # Affiche les repos notables (avec étoiles, forks, etc.)
-          notable: true
-
-          # Affiche les stats de followers, stars, contributions
-          base: true
-
-          # Affiche la liste des organisations dont tu fais partie
-          organizations: true
-
-          # Affiche les info sur les repos épinglés (pinned)
-          pinned: true
-
-          # Active la section de repos populaires
-          popular: true
-
-          # Affiche les stats de followers et following
-          follow: true
-
-          # Liste les langages détaillés
-          languages_full: true
-
-          # Affiche les contributions dans les issues et PR
-          contributions: true
-
-          # Affiche les dernières activités récentes
-          recent_activity: true
-
-          # Affiche les commits par mois
-          commits: true
-
-          # Active la section de stats globales en profondeur
-          base.indepth: true
-
-          # Ajouter un CSS personnalisé
-          extras_css: |
-            svg {
-              filter: drop-shadow(0 0 5px rgba(253,144,97,0.5));
-              border-radius: 15px;
-            }
-            text {
-              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            }
-
-          # Ajouter un JS personnalisé (exemple animation)
-          extras_js: |
-            // Simple rotation d'icône sur hover
-            document.querySelectorAll('svg').forEach(svg => {
-              svg.addEventListener('mouseenter', () => {
-                svg.style.transition = 'transform 0.5s ease';
-                svg.style.transform = 'rotate(10deg)';
-              });
-              svg.addEventListener('mouseleave', () => {
-                svg.style.transform = 'rotate(0deg)';
-              });
-            });
+          base: header, activity, community, repositories, metadata
+          config_timezone: Europe/Paris
+          config_twemoji: yes
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          plugin_gists: yes
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_lines: yes
+          plugin_lines_history_limit: 1
+          plugin_lines_repositories_limit: 4
+          plugin_lines_sections: base
+          repositories_forks: yes
